--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="./images/icon.png">
-<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="css/style.css"/>
 
 <head>
     <title>Mike Haltiner - Portfolio</title>
@@ -27,11 +27,11 @@
     </header>
     <!-- Inhalt -->
     <section class="intro" id="home">
-        <h1 class="section__title section__title--intro">Portfolio<br>Mike Haltiner</h1>
+        <h1 class="section__title section__title--intro">Portfolio | Mike Haltiner</h1>
     </section>
     <!-- About -->
     <section class="about-me" id="about">
-        <h2 class="section__title section__title--about-me">About Me</h2>
+        <!--<h2 class="section__title section__title--about-me">About Me</h2>-->
         <img class="about-me__img" src="images/Mike.jpeg" alt="Mike Haltiner">
         <h3 class="section__content section__content--about-me">Hey I'm Mike, nice to see you here!</h3>
         <p>Note: This site is currently under development!</p>
@@ -43,7 +43,7 @@
             <div class="project">
                 <h3 class="project__title">SuperSwipe</h3>
                 <a href="https://www.superswipe.games/" target="_blank">
-                    <img class="project__img" src="./images/superswipe.jfif" alt="" href>
+                    <img class="project__img" src="./images/superswipe.jfif" alt="superswipe">
                 </a>
                 <p>SuperSwipe - We are a small team of game developer based in switzerland.<br>
                     Our first game called „SumoVolley“ is currently in development, stay tuned for upcomming dev-blogs.
@@ -51,28 +51,28 @@
             </div>
             <div class="project">
                 <h3 class="project__title">Self Driving Car (Nerual Network)</h3>
-                <iframe frameborder="0" src="https://itch.io/embed/1255570?dark=true">
-                    <a href="https://.itch.io/self-driving-car">Neural Network by Gamermusic4</a>
-                </iframe>
+                <a href="https://.itch.io/self-driving-car" target="_blank">
+                    <img class="project__img" src="./images/ProjectThumbnail.png" alt="Self Driving Car (Nerual Network)">
+                </a>
                 <p>Artificial Intelligence<br>
                     At SAE one module is dedicated to AI. We looked at classic AI and self learning / neural networks.
                 </p>
             </div>
             <div class="project">
                 <h3 class="project__title">nalPoN</h3>
-                <iframe frameborder="0" src="https://itch.io/embed/724307?dark=true">
-                    <a href="https://.itch.io/nalpon">nalPoN by Gamermusic4</a>
-                </iframe>
+                <a href="https://.itch.io/nalpon" target="_blank">
+                    <img class="project__img" src="./images/ProjectThumbnail.png" alt="nalPoN">
+                </a>
                 <p>The project for Brackeys Rewind Jam2020.2.<br>
                     Together with a good friend of mine I created a prototype of a FPS game with rewind function.<br>
                     At a later point in my study, I updated the project with local network functionality.</p>
             </div>
             <div class="project">
                 <h3 class="project__title">Orbers</h3>
-                <iframe frameborder="0" src="https://itch.io/embed/595604?dark=true">
-                    <a href="https://.itch.io/orbrs">orb'rs by Gamermusic4</a>
-                </iframe>
-                <p>First ever game jam project of mine. You'll find more information of the jam on the itch.io page.</p>
+                <a href="https://.itch.io/orbrs" target="_blank">
+                    <img class="project__img" src="./images/ProjectThumbnail.png" alt="Orbers">
+                </a>
+                <p>First ever game jam project of mine. You'll find more information about the jam within the itch.io page.</p>
             </div>
         </div>
     </section>
