--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <div class="main">
         <!-- Inhalt -->
         <section class="intro" id="home">
-            <h1 class="section__title section__title--intro">Portfolio | Mike Haltiner</h1>
+            <a href="E-Learning/elearning.html">
+                <h1 class="section__title section__title--intro">Portfolio | Mike Haltiner</h1>
+            </a>
         </section>
         <!-- About -->
         <section class="about" id="about">
