--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 <link rel="stylesheet" href="css/index.css" />
 
 <head>
-    <title>Mike Haltiner - Portfolio</title>
+    <title>Mike Haltiner</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
+        <h1>Portfolio | Mike Haltiner</h1>
         <div class="Navigation">
             <button class="nav-toggle" title="navigation button">
                 <span class="hamburger"></span>
@@ -28,17 +29,12 @@
         </div>
     </header>
 
-    <div class="main">
-        <!-- Inhalt -->
-        <section class="intro" id="home">
-            <h1 class="section__title section__title--intro">Portfolio | Mike Haltiner</h1>
-        </section>
+    <div class="main" id="home">
         <!-- About -->
         <section class="about" id="about">
-            <!--<h2 class="section__title section__title--about">About Me</h2>-->
-            <img class="about-img" src="images/Mike.jpeg" alt="Mike Haltiner">
-            <h3 class="section__content section__content--about">Hello there, nice to see you here!</h3>
-            <p class="content">
+            <img src="images/Mike.jpeg" alt="Mike Haltiner">
+            <h3 class="chContent">Hello there, nice to see you here!</h3>
+            <p class="chContent">
                 Hey, I'm Mike, currently working at SAE Institute Zürich as supervisor and lecturer in Games
                 Programming,
                 parallel I'm in my bachelor studies.</br>
@@ -50,33 +46,32 @@
             </p>
         </section>
         <!-- Projects -->
-        <section class="my-projects" id="projects">
-            <h2 class="section__title">Projects</h2>
+        <section class="ch" id="projects">
+            <h2 class="chTitle">Projects</h2>
             <div class="projects">
                 <div class="project">
-                    <h3 class="project-title">Self Driving Car (Nerual Network)</h3>
-                    <a class="project-link" href="https://gamermusic4.itch.io/self-driving-car" target="_blank">
-                        <img class="project-img" src="images/Project_SDC.png" alt="Self Driving Car (Nerual Network)">
-                    </a>
-                    <p class="project-content">Artificial Intelligence<br>
+                    <h3 class="proTitle">Self Driving Car (Nerual Network)</h3>
+                    <a href="https://gamermusic4.itch.io/self-driving-car" target="_blank">
+                        <img src="images/Project_SDC.png" alt="Self Driving Car (Nerual Network)"></a>
+                    <p class="proContent">Artificial Intelligence<br>
                         At SAE one module is dedicated to AI. We looked at classic AI and self learning / neural
                         networks.
                     </p>
                 </div>
                 <div class="project">
-                    <h3 class="project-title">nalPoN</h3>
-                    <a class="project-link" href="https://gamermusic4.itch.io/nalpon" target="_blank">
-                        <img class="project-img" src="images/Project_nalPoN.png" alt="nalPoN"> </a>
-                    <p class="project-content">The project for Brackeys Rewind Jam2020.2.<br>
+                    <h3 class="proTitle">nalPoN</h3>
+                    <a href="https://gamermusic4.itch.io/nalpon" target="_blank">
+                        <img src="images/Project_nalPoN.png" alt="nalPoN"></a>
+                    <p class="proContent">The project for Brackeys Rewind Jam2020.2.<br>
                         Together with a good friend of mine I created a prototype of a FPS game with rewind
                         function.<br>
                         At a later point in my study, I updated the project with local network functionality.</p>
                 </div>
                 <div class="project">
-                    <h3 class="project-title">Orbers</h3>
-                    <a class="project-link" href="https://gamermusic4.itch.io/orbrs" target="_blank">
-                        <img class="project-img" src="images/Project_Orbers.png" alt="Orbers"> </a>
-                    <p class="project-content">First ever game jam project of mine. Even before I started at SAE. You'll
+                    <h3 class="proTitle">Orbers</h3>
+                    <a href="https://gamermusic4.itch.io/orbrs" target="_blank">
+                        <img src="images/Project_Orbers.png" alt="Orbers"></a>
+                    <p class="proContent">First ever game jam project of mine. Even before I started at SAE. You'll
                         find more information about the jam within the itch.io page.</p>
                 </div>
             </div>
@@ -86,27 +81,27 @@
     <!-- Footer -->
     <footer class="footer" id="footer">
         <div class="main">
-            <h2 class="section__title section__title--footer">Social Links</h2>
-            <div class="social-links">
-                <div class="social-link">
-                    <a href="https://twitter.com/Mike_GM4" target="_blank">
-                        <img class="link-image" src="images/Twitter.png" alt="Twitter"> </a>
-                </div>
-                <div class="social-link">
-                    <a href="https://Twitch.com/Gamermusic4" target="_blank">
-                        <img class="link-image" src="images/Twitch.png" alt="Twitch"> </a>
-                </div>
-                <div class="social-link">
-                    <a href="https://youtube.com/Gamermusic4" target="_blank">
-                        <img class="link-image" src="images/YouTube.png" alt="YouTube"> </a>
-                </div>
-                <div class="social-link">
+            <h2 class="chTitle">Social Links</h2>
+            <div class="socialLinks">
+                <div class="social">
                     <a href="https://www.linkedin.com/in/mike-max-haltiner-251125201/" target="_blank">
-                        <img class="link-image" src="images/Linkedin.png" alt="LinkedIn"> </a>
+                        <img src="images/Linkedin.png" alt="LinkedIn"> </a>
                 </div>
-                <div class="social-link">
+                <div class="social">
                     <a href="https://github.com/Gamermusic4" target="_blank">
-                        <img class="link-image" src="images/Github.png" alt="Github"> </a>
+                        <img src="images/Github.png" alt="Github"> </a>
+                </div>
+                <div class="social">
+                    <a href="https://twitter.com/Mike_GM4" target="_blank">
+                        <img src="images/Twitter.png" alt="Twitter"> </a>
+                </div>
+                <div class="social">
+                    <a href="https://Twitch.com/Gamermusic4" target="_blank">
+                        <img src="images/Twitch.png" alt="Twitch"> </a>
+                </div>
+                <div class="social">
+                    <a href="https://youtube.com/Gamermusic4" target="_blank">
+                        <img src="images/YouTube.png" alt="YouTube"> </a>
                 </div>
             </div>
         </div>
