--- a/E-Learning/elearning.html
+++ b/E-Learning/elearning.html
@@ -439,10 +439,8 @@
                 </div>
         </section>
         <section class="ch">
-            <h2 class="chTitle">OpenVDB Hello World</h2>
-            <p class="chContent">
-
-            </p>
+            <h2 class="chTitle">OpenVDB Hello World --> WIP</h2>
+            <p class="chContent">WIP</p>
         </section>
     </div>
     <script src="../js/tabs.js"></script>
