new order (not order 66)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="icon" type="image/png" href="./images/icon.png">
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/nav.css" />
-<link rel="stylesheet" href="css/index.css" />
+<link rel="stylesheet" href="css/home.css" />
 
 <head>
     <title>Mike Haltiner</title>
@@ -23,6 +23,7 @@
                     <li class="nav__item"><a class="nav__link" href="#home">Home</a></li>
                     <li class="nav__item"><a class="nav__link" href="#about">About Me</a></li>
                     <li class="nav__item"><a class="nav__link" href="#projects">Projects</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#guides">Guides</a></li>
                     <li class="nav__item"><a class="nav__link" href="#footer">Social Links</a></li>
                 </ul>
             </nav>
@@ -74,6 +75,16 @@
                     <p class="proContent">First ever game jam project of mine. Even before I started at SAE. You'll
                         find more information about the jam within the itch.io page.</p>
                 </div>
+            </div>
+        </section>
+        <section class="ch" id="guides">
+            <h2 class="chTitle">Guides</h2>
+            <div class="guide">
+                <div>
+                    <a class="guideLink" href="vdb/index.html"></a>
+                </div>
+                <h3>openVDB</h3>
+                <p>A how to start with <a href="openvdb.org">openVDB</a> library.</p>
             </div>
         </section>
 
