short better link

--- a/vdb/index.html
+++ b/vdb/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="pagehead">
-        <div> <a href="../index.html"></a> </div>
+        <div> <a href="../"></a> </div>
         <h1>E-Learning: OpenVDB</h1>
     </header>
     <div class="main">
