--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h2 class="chTitle">Guides</h2>
             <div class="guide">
                 <div>
-                    <a class="guideLink" href="vdb/index.html"></a>
+                    <a class="guideLink" href="vdb/"></a>
                 </div>
                 <h3>openVDB</h3>
                 <p>A how to start with <a href="openvdb.org">openVDB</a> library.</p>
