--- a/vdb/index.html
+++ b/vdb/index.html
@@ -439,8 +439,14 @@
                 </div>
         </section>
         <section class="ch">
-            <h2 class="chTitle">OpenVDB Hello World --> WIP</h2>
-            <p class="chContent">WIP</p>
+            <h2 class="chTitle">OpenVDB Hello World</h2>
+            <p class="chContent">You can now use the cookbook.cpp file to go through the Cookbooks of openVDB.
+                Be sure to switch your CMake config to release, otherwise you'll run into errors from the tbb library.
+                Also include the &lt;openvdb/openvdb.h&gt; like this:</p>
+            <div class="pre">
+                <div class="console">#include &lt;C:\Program Files\OpenVDB\include\openvdb\openvdb.h&gt;
+                </div>
+            </div>
         </section>
     </div>
     <script src="../js/tabs.js"></script>
