--- a/index.html
+++ b/index.html
@@ -96,11 +96,15 @@
                         <img src="images/Linkedin.png" alt="LinkedIn"> </a>
                 </div>
                 <div class="social">
-                    <a href="https://github.com/Gamermusic4" target="_blank">
+                    <a href="https://github.com/mbytesdev" target="_blank">
                         <img src="images/Github.png" alt="Github"> </a>
                 </div>
                 <div class="social">
-                    <a href="https://twitter.com/Mike_GM4" target="_blank">
+                    <a href="https://mbytes.itch.io/" target="_blank">
+                        <img src="images/itch.png" alt="YouTube"> </a>
+                </div>
+                <div class="social">
+                    <a href="https://twitter.com/mbytesdev" target="_blank">
                         <img src="images/Twitter.png" alt="Twitter"> </a>
                 </div>
                 <div class="social">
